--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -3,3 +3,5 @@
         background: #f9f9f9 !important;
     }
 </style>
+<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
