chore(storybook): Update all stories

--- a/packages/recomponents/.storybook/preview-head.html
+++ b/packages/recomponents/.storybook/preview-head.html
@@ -10,20 +10,20 @@
     }
 
     #root > div {
+        height: 100%;
+    }
+
+    .storybook-center {
         display: flex;
         align-items: center;
         justify-content: center;
+        flex-wrap: wrap;
         height: 100%;
         padding: 20px;
         box-sizing: border-box;
     }
 
-    #root > div > * {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        height: 100%;
-        flex-wrap: wrap;
+    .storybook-item {
+        margin: 1rem;
     }
 </style>
