fix(storybook): Add couple of hacks for dark mode

--- a/packages/recomponents/.storybook/manager-head.html
+++ b/packages/recomponents/.storybook/manager-head.html
@@ -1,4 +1,14 @@
 <style>
+    @media (prefers-color-scheme: dark) {
+        html, body {
+            background: #606060 !important;
+        }
+
+        #storybook-panel-root table tr {
+            background: #606060 !important;
+        }
+    }
+
     .sidebar-header {
         align-items: center !important;
         justify-content: center !important;
