--- a/packages/recomponents/.storybook/preview-head.html
+++ b/packages/recomponents/.storybook/preview-head.html
@@ -5,6 +5,12 @@
         background: #f9f9f9 !important;
     }
 
+    @media (prefers-color-scheme: dark) {
+        html, body, #root {
+            background: #dedede !important;
+        }
+    }
+
     #root {
         padding: 0 !important;
     }
