chore(storybook): Fix table header in dark mode

--- a/packages/recomponents/.storybook/preview-head.html
+++ b/packages/recomponents/.storybook/preview-head.html
@@ -9,6 +9,10 @@
         html, body, #root {
             background: #dedede !important;
         }
+
+        .docblock-propstable-body th {
+            background: #606060 !important;
+        }
     }
 
     #root {
